remove temporary text-fit hack to fix overflow on Safari

--- a/src/css/utilities/text-fit.css
+++ b/src/css/utilities/text-fit.css
@@ -38,9 +38,6 @@
 
 				@container (inline-size > 0) {
 					white-space: nowrap;
-
-					/* temporary hack to fix overflow on Safari */
-					max-inline-size: 100cqi;
 				}
 			}
 
